# ledger-cli

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
.streamlit/: config.toml
docs/: conf.py  features.md  index.md  reference.md  requirements.txt  usage.md
ledger/: bankformat.py  ledger.py  main.py
ledgercli/: bankformat.py  ledger.py  main.py
src/ledgercli/: __init__.py  bankinterface.py  cli.py  main.py  plotter.py  viz.py
tbd/: plotting.py  viz.py
tests/: __init__.py  appendage_regular.csv  dkb_empty.csv  dkb_sample.csv  export_regular.csv  ledger.csv  ledger_coalesce.csv  ledger_distribute.csv  sp_empty.csv  sp_sample.csv  test_bankformat.py  test_bankinterface.py  test_basicledger.py  test_cli.py  test_existingledger.py  test_ledger.py
tests/bank_exports/: dkb_export_empty.csv
