[tool.poetry]
name = "ledger"
version = "0.1.0"
description = ""
authors = ["schuenemann"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.982"

[tool.poetry.scripts]
ledgercli = "ledger.main:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = "True"
warn_return_any = "True"
warn_unused_configs = "True"
strict = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
