[tool.poetry]
name = "ledgercli"
version = "0.2.0"
description = ""
authors = ["schuenemann"]
readme = "README.md"
homepage = "https://github.com/tilschuenemann/ledger_refactor"
license = ""
repository = ""
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial"
    ]
include = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
pathlib = "^1.0.1"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.982"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"

[tool.poetry.scripts]
ledgercli = "ledgercli.main:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = "True"
warn_return_any = "True"
warn_unused_configs = "True"
strict = "True"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
